Bevel tool resets after getting to 1 #40007

Closed
opened 2014-05-03 12:05:48 +02:00 by gandalf3 · 14 comments
Member

System Information
Archlinux
Tested on both an Intel HD Graphics 3000 and an Intel 855GM

Blender Version
Broken: f93bc76 (2.70a) and 19f7f9a (2.70RC)
Worked: 2.69

Short description of error
When using the bevel tool in edit mode (Ctrl B), it will reset to no bevel after reaching a bevel offset of 1

Exact steps for others to reproduce the error
Based on bevel_tool_input_issues.blend

  1. Open attached .blend
  2. Bevel edge (Ctrl+B)
**System Information** Archlinux Tested on both an Intel HD Graphics 3000 and an Intel 855GM **Blender Version** Broken: f93bc76 (2.70a) and 19f7f9a (2.70RC) Worked: 2.69 **Short description of error** When using the bevel tool in edit mode (Ctrl B), it will reset to no bevel after reaching a bevel offset of 1 **Exact steps for others to reproduce the error** Based on [bevel_tool_input_issues.blend](https://archive.blender.org/developer/F86774/bevel_tool_input_issues.blend) 1. Open attached .blend 2. Bevel edge (Ctrl+B)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Howard Trickey was assigned by Bastien Montagne 2014-05-05 07:51:08 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

It Resets once it has reached its maximum possible extend… Not quite sure this is a bug, Howard will know for sure. :)

It Resets once it has reached its maximum possible extend… Not quite sure this is a bug, Howard will know for sure. :)
Author
Member

@mont29 2.69 allowed for going further (though I'm not sure this would be useful in any case). Perhaps the best case would be to just stop when it gets to max? It can be kind of confusing when it resets, sometimes it even looks like nothing happened at all (when the cursor is moved quickly).

@mont29 2.69 allowed for going further (though I'm not sure this would be useful in any case). Perhaps the best case would be to just stop when it gets to max? It can be kind of confusing when it resets, sometimes it even looks like nothing happened at all (when the cursor is moved quickly).

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This is not enough.

You need to give the exact steps to redo the issue.

I tested the file and it works as expected.

This is not enough. You need to give the **exact steps** to redo the issue. I tested the file and it works as expected.
Author
Member

Exactly what I did:

  1. Open .blend (in f93b76)
  2. Press Ctrl+B
  3. Move cursor
  4. As soon as the Offset gets to ~.196, it snaps back to being a single edge.

Here is an animated gif:

examp507.gif

Exactly what I did: 1. Open .blend (in f93b76) 2. Press Ctrl+B 3. Move cursor 4. As soon as the *Offset* gets to ~.196, it snaps back to being a single edge. Here is an animated gif: ![examp507.gif](https://archive.blender.org/developer/F87336/examp507.gif)

@ideasman42 just open the file and hit ctrl-B to see the issue…

@ideasman42 just open the file and hit ctrl-B to see the issue…
Member

This is my task to fix. I confirm that it happens. I have other bevel bugs in my queue, will get to this eventually.

This is my task to fix. I confirm that it happens. I have other bevel bugs in my queue, will get to this eventually.
Member

I have fixed this now, but just missed the cutoff for release candidate 1 of 2.71, so need to hold off committing until git is unfrozen again.

I have fixed this now, but just missed the cutoff for release candidate 1 of 2.71, so need to hold off committing until git is unfrozen again.

This issue was referenced by b5213b2dea

This issue was referenced by b5213b2dea984afcc1c1528c97a70168c2faf25a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit b5213b2dea.

Closed by commit b5213b2dea.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40007
No description provided.